force-app/main/default/objects/SLA_Threshold_Warning__c/SLA_Threshold_Warning__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>When you change this setting , please note that existing Cases needs to be reedited for new changes to come in.</description>
    <label>SLA Threshold Warning</label>
</CustomObject>