force-app/main/default/objects/SLA_Threshold_Warning__c/fields/Case_SLA_Threshold_2_Label__c.field-meta.xml
<CustomField>
    <fullName>Case_SLA_Threshold_2_Label__c</fullName>
    <label>Case SLA Threshold 2 Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>