force-app/main/default/objects/SLA_Threshold_Warning__c/fields/Case_SLA_Threshold_3__c.field-meta.xml
<CustomField>
    <fullName>Case_SLA_Threshold_3__c</fullName>
    <label>Case SLA Threshold 3</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>