force-app/main/default/objects/SLA_Threshold_Warning__c/fields/Custom_Email_Buffer_Days__c.field-meta.xml
<CustomField>
    <fullName>Custom_Email_Buffer_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is used to set the Buffer date based on Overall SLA Date.</description>
    <label>Custom Email Buffer Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>