force-app/main/default/objects/SLA_Threshold_Warning__c/fields/Customer_Email_buffer_hours__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_buffer_hours__c</fullName>
    <label>Customer Email buffer hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>