force-app/main/default/objects/SLA_Threshold_Warning__c/fields/Stage_SLA_Threshold_1__c.field-meta.xml
<CustomField>
    <fullName>Stage_SLA_Threshold_1__c</fullName>
    <label>Stage SLA Threshold 1</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>