force-app/main/default/objects/SLA_Threshold_Warning__c/fields/Stage_SLA_Threshold_2__c.field-meta.xml
<CustomField>
    <fullName>Stage_SLA_Threshold_2__c</fullName>
    <label>Stage SLA Threshold 2</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>