force-app/main/default/objects/SLA_Threshold_Warning__c/fields/Stage_SLA_Threshold_2_Label__c.field-meta.xml
<CustomField>
    <fullName>Stage_SLA_Threshold_2_Label__c</fullName>
    <label>Stage SLA Threshold 2 Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>